--- a/public/assets/template/style.css
+++ b/public/assets/template/style.css
@@ -73,8 +73,12 @@ fieldset legend{
         color: #fff;
         font-size: 14px;
         margin-left: 2%;
-        width: 30%;
+        width: 95%;
         box-shadow: 0 1px 11px 0 rgba(0, 0, 0, 0.12);
         border-radius: 4px;
+    }
+
+    .page-header{
+        display:none;
     }
 }
